Avoid row-gap-10 with flex

--- a/resources/authgear/static/authgear.css
+++ b/resources/authgear/static/authgear.css
@@ -175,10 +175,6 @@ h1, h2, h3, h4, h5, h6 {
   row-gap: 8px;
 }
 
-.row-gap-10 {
-  row-gap: 10px;
-}
-
 .margin-0 {
   margin: 0;
 }
